--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<h1>Marcus William</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portifólio Marcus William</title>
+    <!-- Google Fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,700;0,900;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- devIcons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
+    <!-- CSS do projeto-->
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+    <h1>Teste</h1>
+    <ion-icon name="heart"></ion-icon>
+    <i class="devicon-aftereffects-plain"></i>
+    <i class="devicon-android-plain"></i>
+    <i class="devicon-cplusplus-plain colored"></i>
+
+    
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</body>
+</html>
