--- a/linux.html
+++ b/linux.html
@@ -1,19 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
 
-# Git
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Portifólio Marcus William</title>
+        <!-- Google Fonts-->
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;0,900;1,300;1,700;1,900&display=swap" rel="stylesheet">    
+        <!-- Dev Icons Fonts-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
+        <!-- CSS do Projeto-->
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+
+
+    
+    <body>
+
+<h1 id="name">Git</h1>
 
 RPM-like
 
-```
-yum search git
-yum install git
-```
+<div id="codigo">
+    <p>yum search git</p>
+    <p>yum install git</p>
+</div>
 
 Debian-like
-```
-apt-get update
-apt-get install git
-```
-# Java
+<div id="codigo">
+    <p>apt-get update</p>
+    <p>apt-get install git</p>
+</div>
+
+<h1 id="name">Java</h1>
+
 
 Debian-like
 ```
@@ -21,7 +41,7 @@ apt-get update
 sudo apt install default-jre
 ```
 
-# VPNC
+<h1 id="name">VPNC</h1>
 
 ```
 mkdir -p ~/Developer/TJPA
@@ -29,7 +49,7 @@ mkdir -p ~/Developer/_dados
 ```
 
 
-# Projetos
+<h1 id="name">Projetos</h1>
 
 ```
 mkdir -p ~/Developer/_dados
@@ -65,7 +85,8 @@ cd ~/Developer/
 git clone https://github.com/marcuswlima/learning.git
 ```
 
-# Oracle
+<h1 id="name">Oracle</h1>
+
 ### [SQLcl](https://www.oracle.com/tools/downloads/sqlcl-downloads.html)  
 
 ```
